@@ -169,6 +169,8 @@ CVS code -
 	- If they're defined, translate KEY_SUP into NANO_PREVLINE_KEY
 	  and KEY_SDOWN into NANO_NEXTLINE_KEY, since they are sometimes
 	  generated by Shift-Up and Shift-Down. (DLR)
+	- Translate KEY_EVENT to ERR if we get it, so that it's properly
+	  ignored. (DLR)
   parse_escape_seq_kbinput()
 	- Handle unknown and unignored escape sequences once here
 	  instead of twice in parse_kbinput(). (DLR)
